ручки для items и swagger
