# internal/delivery/http/router.go
@@ -10,6 +10,7 @@ import (
 func SetupRoutes(
 	router *gin.Engine,
 	userHandler *handler.UserHandler,
+	itemHandler *handler.ItemHandler,
 	jwtService *jwtservice.JWTService,
 ) {
 	auth := router.Group("/api/v1/auth")
@@ -22,5 +23,19 @@ func SetupRoutes(
 	users.Use(middleware.AuthMiddleware(jwtService))
 	{
 		users.GET("/me", userHandler.GetMe)
+		users.GET("/:user_id/items", itemHandler.ListByUserID)
+	}
+
+	items := router.Group("/api/v1/items")
+	{
+		items.GET("/:id", itemHandler.GetByID)
+		items.GET("", itemHandler.List)
+	}
+	itemsProtected := items.Group("")
+	itemsProtected.Use(middleware.AuthMiddleware(jwtService))
+	{
+		itemsProtected.POST("", itemHandler.Create)
+		itemsProtected.DELETE("/:id", itemHandler.Delete)
+		itemsProtected.GET("/me", itemHandler.ListMyItems)
 	}
 }
